# zcoap-server

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clean_cmake.bat  clean_cmake.sh  coap_root.c  config.h  zsnprintf.c  zsnprintf.h
Testing/: observables_load_test.sh
Testing/test/: observables_load_test.sh
example-linux/: example-server-linux-fs.c  example-server-linux-fs.h  platform.h  server-linux-fs.c  server-linux-fs.h  server-linux-telemetry.c  server-linux.c
example-win32/: platform.h  server-win32-endpoints.c  server-win32-endpoints.h  server-win32.c
examples/: example-server-linux-fs.c  example-server-linux-fs.h  example-server-linux-ls.c  example-server-linux-telemetry.c  example-server-linux.c  example-server-win32.c  example-server.c
examples/posix/: fs.c  fs.h  platform.h  private.c  public.c  public.h  server.c
examples/win32/: platform.h  server-win32-endpoints.c
linux-example/: fs.c  fs.h  platform.h  private.c  public.c  server.c
posix/: fs.c
posix-example/: fs.c  platform.h  private.c  private.h  public.c  server.c
src/: config.h  platform.h  zcoap-server.c  zcoap-server.h  zcoap.c  zsnprintf.c  zsnprintf.h
win32-example/: server-win32-endpoints.c  server-win32-endpoints.h  server-win32.c
